--- a/server/liveblog/themes/themes_assets/amp/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-timeline.html
@@ -48,7 +48,9 @@
     {% endif %}
 
   </div>
-
+  {% if settings.canComment %}
+    {% include "template-comment.html" %}
+  {% endif %}
   <amp-img src="image.png"
   width="1"
   height="1"
