LBSD-2099 A few adjustments after code review

--- a/server/liveblog/themes/themes_assets/amp/templates/template-ad-entry.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-ad-entry.html
@@ -7,7 +7,7 @@
     <div class="lb-item lb-item-advertisement">
       <div class="lb-advertisement">{{ translate('Advertisement') }}</div>
       <div>
-          {{ item.text | safe }} {{ updateTime }}
+          {{ item.text | safe }}
       </div>
     </div>
     <!-- item end -->
