--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -17,6 +17,11 @@ $PADDING: 20px;
             background-color: #eaeaea;
             padding: 0 20px;
         }
+
+        .tabbable.outer > .nav-stacked {
+            width: 200px;
+        }
+
         .tab-content {
             > .header {
                 height: $SUBNAV_HEIGHT;
