--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -1315,7 +1315,7 @@ body .scorecard-top__info {
         text-align: left;
       }
 
-      .lb-author__avatar {
+      .lb-author .lb-author__avatar {
           width: 18px;
           height: 18px;
           margin-left: 10px;
@@ -1358,6 +1358,12 @@ body .scorecard-top__info {
 
       .lb-post-shareBox {
         line-height: 1.6em;
+      }
+
+      .lb-author.lb-author--bottom {
+        margin-top: 10px;
+        margin-right: auto;
+        margin-left: 0px;
       }
     }
 }
