feature: embedly video proof of concept WIP

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -349,8 +349,8 @@
                                         display: inline;
                                         vertical-align: top;
                                         position: absolute;
-                                        left: 16px;
-                                        top: 9px;
+                                        left: 13px;
+                                        top: 10px;
                                         color: $gray;
                                     }
                                     &:last-child {
@@ -478,7 +478,7 @@
                             }
                             // padding
                             &__inner {padding: 0;}
-                            &[data-type='quote'], &[data-type='image'], &[data-type='embed'] {
+                            &[data-type='quote'], &[data-type='image'], &[data-type='video'], &[data-type='embed'] {
                                 .st-block__inner {
                                     padding: 20px;
                                     padding-top: 45px;
