--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -25,6 +25,8 @@
   class="lb-post list-group-item show-author-avatar {{ type }} {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if displaynone %}mod--displaynone{% endif %}"
   data-post-id="{{ item._id }}"
   data-post-sticky="{{ item.sticky }}">
+
+  {% block post_header %}
   <div class="lb-post-header">
 
     <div class="lb-type lb-type--{{ item.post_items_type }}"></div>
@@ -46,17 +48,19 @@
         <div class="lb-post-date relativeDate{% if settings.clientDatetimeOnly %} mod--displaynone{% endif %}" data-js-timestamp="{{ postDate }}">{{ postDate | date('') }}</div>
       {% endif %}
     </div>
+
     {% if settings.authorPosition == "top"  %}
       {% include "template-author.html" %}
     {% else %}
       {% include "template-post-actions.html" %}
     {% endif %}
-
   </div>
+  {% endblock %}
 
   {% endif %}
   <!-- end sticky position toggle -->
 
+  {% block post_body %}
   <!-- post start -->
   <div class="items-container">
   {% if type == "comment" %}
@@ -114,7 +118,9 @@
   {% endif %}
   </div>
   <!-- post end -->
+  {% endblock %}
 
+  {% block post_footer %}
   <div class="lb-post-bottom">
     {% if settings.showUpdateDatetime and (item.content_updated_date != item.firstcreated) and item.post_items_type != "advertisement" %}
       <div class="lb-post-updated">
@@ -127,7 +133,7 @@
     {% else %}
       {% include "template-post-actions.html" %}
     {% endif %}
-
-    </div>
+  </div>
+  {% endblock %}
 
 </article>
