--- a/client/app/scripts/liveblog-bloglist/styles/liveblog-bloglist.scss
+++ b/client/app/scripts/liveblog-bloglist/styles/liveblog-bloglist.scss
@@ -237,3 +237,9 @@ div.button-stack.right-stack.create-blog {
     position: absolute;
     right: 0;
 }
+
+.bulk-select {
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+}
