--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -35,36 +35,38 @@
   {% block timeline_header %}
   <!-- Header -->
   <div class="header-bar">
-    <div class="sorting-bar">
-      <div class="sorting-bar__orders">
-        <div class="sorting-bar__dropdownBtn" data-js-sort_dropdown_button>
-          {% if settings.postOrder == 'editorial' %}
-            {{  translate("Editorial") }}
-          {% elif settings.postOrder == 'newest_first' %}
-            {{  translate("Newest first") }}
-          {% elif settings.postOrder == 'oldest_first' %}
-            {{ translate("Oldest first") }}
-          {% endif %}
-        </div>
-        <div class="sorting-bar__dropdownContent">
-          <div
-            class="sorting-bar__order {%if settings.postOrder == 'editorial' %}sorting-bar__order--active{% endif %}"
-            data-js-orderby_editorial>
-            {{  translate("Editorial") }}
+    {% if not settings.hidePostOrder %}
+      <div class="sorting-bar">
+        <div class="sorting-bar__orders">
+          <div class="sorting-bar__dropdownBtn" data-js-sort_dropdown_button>
+            {% if settings.postOrder == 'editorial' %}
+              {{  translate("Editorial") }}
+            {% elif settings.postOrder == 'newest_first' %}
+              {{  translate("Newest first") }}
+            {% elif settings.postOrder == 'oldest_first' %}
+              {{ translate("Oldest first") }}
+            {% endif %}
           </div>
-          <div
-            class="sorting-bar__order {%if settings.postOrder == 'newest_first' %}sorting-bar__order--active{% endif %}"
-            data-js-orderby_descending>
-            {{  translate("Newest first") }}
-          </div>
-          <div
-            class="sorting-bar__order {%if settings.postOrder == 'oldest_first'%}sorting-bar__order--active{% endif %}"
-            data-js-orderby_ascending>
-            {{ translate("Oldest first") }}
+          <div class="sorting-bar__dropdownContent">
+            <div
+              class="sorting-bar__order {%if settings.postOrder == 'editorial' %}sorting-bar__order--active{% endif %}"
+              data-js-orderby_editorial>
+              {{  translate("Editorial") }}
+            </div>
+            <div
+              class="sorting-bar__order {%if settings.postOrder == 'newest_first' %}sorting-bar__order--active{% endif %}"
+              data-js-orderby_descending>
+              {{  translate("Newest first") }}
+            </div>
+            <div
+              class="sorting-bar__order {%if settings.postOrder == 'oldest_first'%}sorting-bar__order--active{% endif %}"
+              data-js-orderby_ascending>
+              {{ translate("Oldest first") }}
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    {% endif %}
     <div class="header-bar__actions"></div>
       {% if settings.hasHighlights %}
           <button class="header-bar__highlight" data-js-show-highlighted><span>{{ translate('Highlights') }}</span></button>
