--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -146,9 +146,13 @@
     line-height: 1.4;
 }
 
-// Remove language options from general and blog settings
-// because the feature is not implemented yet
-// FIXME: must be uncommented after release (LBSD-546)
+// Remove language option form users profile
+// https://dev.sourcefabric.org/browse/LBSD-2196
+.profile-info {
+	div.field__language {
+		display: none;
+	}
+}
 
 //Hide liveblog tab in global settings
 :not(.blog-settings-view)>.settings-page>.tabbable.outer>.nav-stacked {
