fix: LBSD-2217 UI modals

--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -17,6 +17,10 @@
 .page-nav-title {
     padding: 10px 0;
 }
+
+.page-nav-title--paddingLeft {
+    padding-left: 20px;
+}
 .navbtn i+.title {
     margin-left: 10px;
 }
