fix: LBSD-2221 amp commenting

--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -1461,3 +1461,12 @@ body .scorecard-top__info {
     object-fit: contain;
   }
 }
+
+form.amp-form-submit-success input, form.amp-form-submit-success textarea, form.amp-form-submit-success .comment__button {
+  display: none
+}
+
+form.amp-form-submit-success [submit-success] {
+  color: green;
+  padding: 1em
+}
