--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -127,7 +127,7 @@
         <span>{{ translate('Updated') }}</span> <span class="lb-post-updated-time relativeDate{% if settings.clientDatetimeOnly %} mod--displaynone{% endif %}" data-js-timestamp="{{item.content_updated_date}}">{{item.content_updated_date | date('')}}</span>
       </div>
     {% endif %}
-    {% if (not item.sticky) and (settings.stickyPosition != 'top') %}
+    {% if (not item.sticky) or (item.sticky and settings.stickyPosition != 'top') %}
       {% if settings.authorPosition == "bottom"  %}
         {% include "template-author.html" %}
       {% else %}
