--- a/server/liveblog/themes/themes_assets/default/templates/template-item-embed.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-item-embed.html
@@ -1,67 +1,95 @@
 {% if ref.item.meta.provider_name|lower == 'youtube' and ref.item.meta.html %}
-    <div class="item--embed__element lb-responsive-video">
-        {% if settings.youtubePrivateMode %}
-            <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
-                title="{{ref.item.meta.title}}"
-                width="{{ref.item.meta.thumbnail_width}}"
-                height="{{ref.item.meta.thumbnail_height}}"
-                src="{{ref.item.meta.url | replace("http:","https:") | replace("youtube.com","youtube-nocookie.com") | replace("watch?v=","embed/")}}">
-            </iframe>
-        {% else %}
-            {{ ref.item.meta.html | safe }}
-        {% endif %}
-    </div>
+  <div class="item--embed__element lb-responsive-video">
+    {% if settings.youtubePrivateMode %}
+      <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
+        title="{{ref.item.meta.title}}"
+        width="{{ref.item.meta.thumbnail_width}}"
+        height="{{ref.item.meta.thumbnail_height}}"
+        src="{{ref.item.meta.url | replace("http:","https:") | replace("youtube.com","youtube-nocookie.com") | replace("watch?v=","embed/")}}">
+      </iframe>
+    {% else %}
+      <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
+        class="ce-iframe" 
+        title="{{ref.item.meta.title}}"
+        width="{{ref.item.meta.thumbnail_width}}"
+        height="{{ref.item.meta.thumbnail_height}}"
+        data-ce-src="{{ref.item.meta.url | replace("http:","https:") | replace("watch?v=","embed/")}}">
+      </iframe>
+<!-- {{ ref.item.meta.html | safe }} -->
+    {% endif %}
+  </div>
 {% elif (ref.item.meta.provider_name|lower == 'twitter') and ref.item.meta.html  %}
-    <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
+    <!-- <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div> -->
+  <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
+    class="ce-iframe" 
+    title="{{ref.item.meta.title}}"
+    width="{{ref.item.meta.thumbnail_width}}"
+    height="{{ref.item.meta.thumbnail_height}}"
+    data-ce-src="{{ref.item.meta.original_url | replace("http:","https:") }}">
+  </iframe>
 {% elif ref.item.meta.provider_name|lower == 'facebook' and ref.item.meta.original_url %}
-    <blockquote class="embedly-card" data-card-controls="0">
+    <!-- <blockquote class="embedly-card" data-card-controls="0">
         <h4><a href="{{ ref.item.meta.original_url }}">{{ ref.item.meta.credit }}</a></h4>
         <p>{{ ref.item.meta.title }}</p>
-    </blockquote>
+    </blockquote> -->
+  <iframe frameborder="0"
+    class="ce-iframe" 
+    title="{{ref.item.meta.title}}"
+    width="auto"
+    height="auto"
+    data-ce-src="{{ref.item.meta.original_url | replace("http:","https:") }}">
+  </iframe>
+
 {% elif ref.item.meta.provider_name|lower == 'instagram' and ref.item.meta.original_url %}
-    <blockquote class="embedly-card" data-card-controls="0">
+    <!-- <blockquote class="embedly-card" data-card-controls="0">
         <h4><a href="{{ ref.item.meta.original_url }}">{{ ref.item.meta.credit }}</a></h4>
         <p>{{ ref.item.meta.title }}</p>
-    </blockquote>
+    </blockquote> -->
+  <iframe frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media"
+    class="ce-iframe" 
+    title="{{ref.item.meta.title}}"
+    width="{{ref.item.meta.thumbnail_width}}"
+    height="{{ref.item.meta.thumbnail_height}}"
+    data-ce-src="{{ref.item.meta.original_url | replace("http:","https:") }}">
+  </iframe>
 {% elif ref.item.meta.provider_name|lower == 'brightcove' and ref.item.meta.html %}
-    <div class="item--embed__element lb-responsive-video">{{ ref.item.meta.html | safe }}</div>
-    <div class="item--embed__info">
-        {% if ref.item.meta.title %}
-        <div class="item--embed__title">
-           {{ ref.item.meta.title }}
-        </div>
-        {% endif %}
-        {% if ref.item.meta.description %}
-        <div class="item--embed__description">{{ ref.item.meta.description }}</div>
-        {% endif %}
-    </div>
+  <div class="item--embed__element lb-responsive-video">{{ ref.item.meta.html | safe }}</div>
+  <div class="item--embed__info">
+    {% if ref.item.meta.title %}
+      <div class="item--embed__title">
+         {{ ref.item.meta.title }}
+      </div>
+    {% endif %}
+    {% if ref.item.meta.description %}
+      <div class="item--embed__description">{{ ref.item.meta.description }}</div>
+    {% endif %}
+  </div>
 {% else %}
-    {% if ref.item.meta.html %}
+  {% if ref.item.meta.html %}
     <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
     {% endif %}
     {% if (ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit or (not ref.item.meta.html and ref.item.meta.thumbnail_url)) %}
-    <article class="item--embed item--embed__wrapper">
+      <article class="item--embed item--embed__wrapper">
         {% if not ref.item.meta.html and ref.item.meta.thumbnail_url %}
         <a href="{{ ref.item.meta.original_url }}" target="_blank" class="{{ 'item--embed__illustration' if ref.item.meta.description else 'item--embed__only-illustration' }}">
-            <img src="{{ ref.item.meta.thumbnail_url }}"/>
-    </a>
+          <img src="{{ ref.item.meta.thumbnail_url }}"/>
+        </a>
     {% endif %}
     {% if ref.item.meta.title or ref.item.meta.description or ref.item.meta.credit %}
-        <div class="item--embed__info">
-            {% if ref.item.meta.title %}
-            <div class="item--embed__title">
-                <a href="{{ ref.item.meta.original_url }}" target="_blank" title="{{ ref.item.meta.title }}">{{ ref.item.meta.title }}</a>
-            </div>
-            {% endif %}
-            {% if ref.item.meta.description %}
-            <div class="item--embed__description">{{ ref.item.meta.description }}</div>
-            {% endif %}
-            {% if ref.item.meta.credit %}
-            <div class="item--embed__credit">{{ ref.item.meta.credit }}</div>
-            {% endif %}
+      <div class="item--embed__info">
+        {% if ref.item.meta.title %}
+        <div class="item--embed__title">
+          <a href="{{ ref.item.meta.original_url }}" target="_blank" title="{{ ref.item.meta.title }}">{{ ref.item.meta.title }}</a>
         </div>
         {% endif %}
-
-    </article>
+        {% if ref.item.meta.description %}
+          <div class="item--embed__description">{{ ref.item.meta.description }}</div>
+        {% endif %}
+        {% if ref.item.meta.credit %}
+          <div class="item--embed__credit">{{ ref.item.meta.credit }}</div>
+        {% endif %}
+      </div>
+        {% endif %}
+      </article>
     {% endif %}
 {% endif %}
