LBSD-2189 Adjusting amp theme styling to match advertisement items

--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -943,17 +943,30 @@
 
   .lb-advertisement {
       position: relative;
-      left: 2px;
+      left: 68px;
       color: #767676;
       font-size: 0.75rem;
   }
 
-  .lb-item-advertisement fieldset {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    vertical-align: baseline;
+  .lb-item-advertisement-local {
+    margin-top: 25px;
+
+    fieldset {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      vertical-align: baseline;
+
+      img {
+        max-width: 100%;
+      }
+    }
+
+    .fieldset-group {
+      font-size: 13px;
+    }
+
   }
 
   .lb-post:hover .lb-post-permalink, .lb-sticky-top-post:hover .lb-post-permalink {
