--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -1465,6 +1465,12 @@ body .scorecard-top__info {
   }
 }
 
+@media (max-width: 575.98px) {
+  .lb-timeline{
+    max-width: 100vw!important
+  }
+}
+
 .lb-blog-picture-container {
   position: relative;
   width: 100%;
