LBSD-2258 Adjusted edit flag color as per requested. Previous orange color was a bit disturbing.

--- a/client/app/scripts/liveblog-edit/styles/post.scss
+++ b/client/app/scripts/liveblog-edit/styles/post.scss
@@ -206,10 +206,10 @@
     }
 
     &.flag-yellow {
-        border-left: 5px solid #f8a501 !important;
+        border-left: 2px solid #D4D4D4 !important;
 
         .flag-editors {
-            color: #ef7d4f;
+            color: #69696C;
         }
     }
 
