--- a/server/liveblog/themes/themes_assets/classic/views/author.html
+++ b/server/liveblog/themes/themes_assets/classic/views/author.html
@@ -1,6 +1,6 @@
 <div class="lb-author" ng-if="timeline.settings.showAuthor">
     <div
-        ng-if="timeline.settings.showAuthor && timeline.settings.showAuthorAvatar" 
+        ng-if="timeline.settings.showAuthor && timeline.settings.showAuthorAvatar"
         ng-class="{'lb-author__avatar': (item.item_type !== 'comment'),
                        'lb-author__comment': (item.item_type === 'comment')}">
             <img ng-if="item.item_type !== 'comment'"
@@ -10,12 +10,15 @@
     </div>
     <div class="lb-author__date" ng-bind="item.displayDate | prettifyIsoDate"></div>
     <!-- author name, with or without mailto link  -->
-    <div ng-if="!post.syndication_in || timeline.settings.showSyndicatedAuthor">   
+    <div ng-if="!post.syndication_in || timeline.settings.showSyndicatedAuthor">
         <!-- author name, with or without mailto link  -->
-        <div ng-if="!timeline.settings.authorNameLinksToEmail || item.item_type === 'comment'"
+        <div ng-if="!timeline.settings.authorNameLinksToEmail"
              class="lb-author__name"
              ng-bind="post.original_creator[timeline.settings.authorNameFormat]">
         </div>
+
+        <div class="lb-author__name" ng-if="item.item_type === 'comment'" ng-bind="item.original_creator[timeline.settings.authorNameFormat]"></div>
+
         <div ng-if="timeline.settings.authorNameLinksToEmail && item.item_type !== 'comment'"
              class="lb-author__name">
             <a href="mailto:{{post.mainItem.original_creator.email}}"
