LBSD-2263 Added better styling for youtube videos in Simple Theme

--- a/server/liveblog/themes/themes_assets/simple/less/simple.less
+++ b/server/liveblog/themes/themes_assets/simple/less/simple.less
@@ -22,6 +22,7 @@
     .lb-post-date-icons {
         margin-left: 10px;
     }
+    .lb-type--video,
     [class*="lb-type--embed"] {
         width: 20px;
         height: 20px;
