LBSD-2334 Adding extra information to upload video feature. Users won't be able to remove video from LiveBlog they will need to go into youtube account and do it manually. Added a few improvements to AMP theme and adding support for Youtube Video upload feature

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -312,6 +312,20 @@
                             a[data-type='comment'] {
                                 display: none;
                             }
+
+                            // adding Beta label to Youtube upload option
+                            a[data-type=video] {
+                                &:after {
+                                    display: inline-block;
+                                    content: 'beta';
+                                    font-size: 9px;
+                                    color: red;
+                                    position: absolute;
+                                    top: -10px;
+                                    right: 7px;
+                                }
+                            }
+
                             padding: 0;
                             // [block types bar]
                             &--active {
