LBSD-2352 Implement AMP analytics hit in order to trigger blog's first embedded

--- a/server/liveblog/blogs/templates/embed_amp.html
+++ b/server/liveblog/blogs/templates/embed_amp.html
@@ -34,7 +34,7 @@
       <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
     {% endif %}
     <!-- google analytics -->
-    {% if settings.gaCode %}
+    {% if settings.gaCode or hook_urls %}
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     {% endif %}
     <!-- end google analytics -->
@@ -81,6 +81,28 @@
 </amp-analytics>
 <!-- end google analytics -->
 {% endif -%}
+
+{% if hook_urls %}
+<amp-analytics>
+<script type="application/json">
+{
+  "requests": {
+    "pageview": "{{api_host}}api/analytics/hit?amp=1&context_url=${documentReferrer}&blog_id=${blog_id}"
+  },
+  "triggers": {
+    "trackPageview": {
+      "on": "visible",
+      "request": "pageview"
+    }
+  },
+  "vars": {
+    "blog_id": "{{blog._id}}"
+  }
+}
+</script>
+</amp-analytics>
+{% endif %}
+
 <!-- esi -->
 {% if not settings.renderForESI %}
   </body>
