LBSD-2331 Improvements to the commenting feature. - Added blog level setting that overrides theme setting for users can comment - Disabling commenting feature once the blog it's been archived

--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -416,3 +416,11 @@ i.icon-star.orange {
 .minusMargin1020{
     margin: -10px -20px;
 }
+
+.form-input__hint {
+    color: grey;
+    font-size: 1.2rem;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    display: inline-block;
+}
