LBSD-2363 Update message for blog unavailable

--- a/server/liveblog/blogs/templates/blog-unavailable.html
+++ b/server/liveblog/blogs/templates/blog-unavailable.html
@@ -9,5 +9,5 @@
     </div>
     {% endif %}
 
-    <h2>This live blog has finished and it's not available anymore.</h2>
+    <h2>This live blog has finished and is no longer available.</h2>
 </div>
