LBSD-2326 Add WhatsApp, Telegram and Viber to the SHARE button Removed G+ sharing option from AMP and Default theme Fixed some warning on AMP theme and also improved comment form

--- a/server/liveblog/themes/themes_assets/amp/templates/template-comment.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-comment.html
@@ -1,6 +1,6 @@
 <amp-accordion class="comment__accordion">
     <section>
-        <h4>{{ translate('Post a comment') }}</h4>
+        <h4><span>{{ translate('Post a comment') }}</span></h4>
         <form method="post"
             action-xhr="{{ api_host }}api/client_item_comments"
             target="_top"
