--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -1352,10 +1352,6 @@ body .scorecard-top__info {
         margin-bottom: -5px;
       }
 
-      .lb-post-actions {
-
-      }
-
       .lb-post-shareBox {
         line-height: 1.6em;
       }
@@ -1371,5 +1367,11 @@ body .scorecard-top__info {
 @media (max-width: 575.98px) {
   .lb-timeline{
     max-width: 100vw!important
+  }
+}
+
+@media (min-width: 768px) {
+  .share_viber-hidden-desktop {
+    display: none !important;
   }
 }
