--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -167,12 +167,24 @@
     position: inherit;
 }
 
+.btn--contact-support {
+    float: right;
+    position: relative;
+    z-index: 2001;
+    right: 60px;
+    top: 10px;
+    font-size: 1.1rem;
+}
+
 .help-link {
     color: white;
+    position: relative !important;
+    float: right;
     z-index: 2000;
-    position:absolute !important;
-    right: 126px;
-    top:15px;
+    right: 60px;
+    top: 15px;
+    margin-right: 15px;
+
     .dropdown-menu {
         min-width: 90px;
     }
