LBSD-2355 Implementing comment sent notification in AMP theme

--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -1372,3 +1372,18 @@ form.amp-form-submit-success [submit-success] {
   color: green;
   padding: 1em
 }
+
+
+.lightbox-success {
+  background: rgba(133, 228, 108, 0.8);
+  width: 100%;
+  height: 45px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.lightbox-success p {
+  color: white;
+  font-weight: 500;
+}
