LBSD-2355 Implementing notification after user comment in Default SEO Theme

--- a/server/liveblog/themes/themes_assets/amp/templates/template-comment.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-comment.html
@@ -21,7 +21,7 @@
                         {{ translate('Comment Sent') }}
                         <amp-lightbox id="lightbox-comment-success" layout="nodisplay">
                             <div class="lightbox-success" on="tap:lightbox-comment-success.close" role="button" tabindex="0">
-                                <p>{{ translate('Your comment was sent for approval') }}</p>
+                                <p>{{ translate("Your comment is being reviewed and will be published as soon as it's approved") }}.</p>
                             </div>
                         </amp-lightbox>
                     </template>
