--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -181,9 +181,24 @@
     display: none;
   }
 
+  .comment_container {
+    position: relative;
+  }
+
   .comment-sent {
-      margin-top: 20px;
-      margin-bottom: 10px;
+    background: rgb(86, 195, 145);
+    width: 100%;
+    height: 45px;
+    position: absolute;
+    top: -10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .comment-sent p {
+    color: white;
+    font-weight: 500;
   }
 
   .comment__headline {
