--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -173,39 +173,6 @@
     }
   }
 
-  //
-  // form.comment {
-  //   outline: 2px solid @lightgrey;
-  //   .animate_smooth(max-height, 0.6s);
-  //   margin: 5px;
-  //   max-height: 500px;
-  // }
-  //
-  // form.comment.hide {
-  //   outline: 0px;
-  //   max-height: 0px;
-  // }
-  //
-  // div.comment-sent.hide {
-  //   display: none;
-  // }
-  //
-  // .comment__wrap {
-  //   .animate_smooth(opacity, 0.6s);
-  //   transition-delay: 0.2s;
-  //   opacity: 1;
-  //   padding: 40px;
-  // }
-  //
-  // form.comment.hide .comment__wrap, div.comment-sent.hide .comment__wrap {
-  //   .animate_smooth(opacity, 0.2s);
-  //   opacity: 0;
-  // }
-  //
-  // .comment-sent {
-  //     margin-top: 20px;
-  // }
-  //
   .comment__headline {
     font-size: 1.3em;
     line-height: 1.4em;
@@ -1375,7 +1342,7 @@ form.amp-form-submit-success [submit-success] {
 
 
 .lightbox-success {
-  background: rgba(133, 228, 108, 0.8);
+  background: rgb(86, 195, 145);
   width: 100%;
   height: 45px;
   position: absolute;
