LBSD-2355 Improving notification after user sends a comment

--- a/server/liveblog/themes/themes_assets/classic/styles/embed.css
+++ b/server/liveblog/themes/themes_assets/classic/styles/embed.css
@@ -838,3 +838,19 @@ body .scorecard-top {
     width: 100%;
     height: 100%;
 }
+
+.comment-sent {
+    background: rgb(86, 195, 145);
+    width: 100%;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.comment-sent h3 {
+    color: white;
+    font-weight: 500;
+    top: -7px;
+    position: relative;
+}
