LBSD-2288 Fixes facebook embeds are cut off in small screen devices

--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -8,6 +8,9 @@
     .card .hdr{
       display: none;
     }
+    body#cards {
+        padding: 0px;
+    }
 </style>
 <script>
     embedly("defaults", {
