LBSD-2393 Implements new modal dialog for posts being edit which edit flag expire With this new approach we are trying to solve the problem of auto-closing the editor when the edit flag TTL reached so instead we now have our own modal building components and a custom modal dialog that allows the user picking from three options instead of closing the editor.
Additionally, the components were build using React and Typescript which makes them the first ones in our stack :)
the components are mostly react and they have a small combination with angular logic.

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -879,3 +879,22 @@
         position: relative !important;
     }
 }
+
+
+.inactivity-modal.modal {
+    .modal__dialog {
+        max-width: 600px;
+    }
+
+    .modal__content {
+        .modal__body {
+            max-width: inherit;
+        }
+    }
+
+    .modal__footer {
+        .btn {
+            margin-right: 10px;
+        }
+    }
+}
