LBSD-2355 Fixes issue with lightbox shown after comment sent by users on AMP

--- a/server/liveblog/themes/themes_assets/amp/templates/template-comment.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-comment.html
@@ -4,7 +4,7 @@
         <form method="post"
             action-xhr="{{ api_host }}api/client_item_comments"
             target="_top"
-            on="submit-success:lightbox-comment-success;"
+            on="submit-success:lightbox-comment-success"
             class="comment">
             <div class="comment__wrap">
                 <div>
@@ -17,13 +17,11 @@
                     <textarea placeholder="{{ translate('Comment *') }}" name="text" required></textarea>
                 </div>
                 <div submit-success>
-                    <template type="amp-mustache">
-                        <amp-lightbox id="lightbox-comment-success" layout="nodisplay">
-                            <div class="lightbox-success" on="tap:lightbox-comment-success.close" role="button" tabindex="0">
-                                <p>{{ translate("Your comment is being reviewed and will be published as soon as it's approved") }}.</p>
-                            </div>
-                        </amp-lightbox>
-                    </template>
+                    <amp-lightbox id="lightbox-comment-success" layout="nodisplay">
+                        <div class="lightbox-success" on="tap:lightbox-comment-success.close" role="button" tabindex="0">
+                            <p>{{ translate("Your comment is being reviewed and will be published as soon as it's approved") }}.</p>
+                        </div>
+                    </amp-lightbox>
                 </div>
                 <div submit-error>
                     <template type="amp-mustache">
