--- a/server/liveblog/themes/themes_assets/amp/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-timeline.html
@@ -16,6 +16,9 @@
       <amp-img src="{{ blog.picture_url }}" layout="fill"></amp-img>
     </div>
   {% endif %}
+
+  {% include "default/template-watermark.html" %}
+
   {% endblock %}
 
   {% block timeline_header %}
