--- a/server/liveblog/blogs/templates/embed_amp.html
+++ b/server/liveblog/blogs/templates/embed_amp.html
@@ -42,16 +42,22 @@
 
     {% block extrahead %}
     <!-- amp style -->
-    {% if amp_style %}
     <style amp-custom>
-      {{ amp_style | safe }}
-      {{ (output and output.get('style')) | tostyle | safe }}
+      {% if amp_style %}
+        {{ amp_style | safe }}
+        {{ (output and output.get('style')) | tostyle | safe }}
+      {% endif %}
+
+      {% if settings.watermark %}
+      :root {
+        --watermark: url('{{ assets_root }}images/logo-liveblog-watermark.svg')
+      }
+      {% endif %}
     </style>
-    {% endif %}
     <!-- end amp style -->
     {% endblock %}
   </head>
-  <body class="lb-wrapBody">
+  <body class="lb-wrapBody {% if settings.watermark %}watermark{% endif %}" style="{{ (output and output.get('style')) | tostyle | safe }};">
 <!-- else esi -->
 {% elif not settings.removeStylesESI %}
     {% if amp_style %}
