--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -3,6 +3,23 @@
 
 // Timeline
 
+.watermark {
+  .lb-timeline:before {
+    content:'';
+    background-image:var(--watermark);
+    background-repeat:repeat;
+    background-size:500px;
+
+    opacity: 0.08;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index:-1;
+  }
+}
+
 .lb-timeline {
     position: relative;
     font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
