--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -440,3 +440,34 @@ i.icon-star.orange {
 .text-red {
     color: #b94a48 !important;
 }
+
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.text-bold {
+    font-weight: 500;
+}
+
+.mb-10 { margin-bottom: 10px; }
+.mb-20 { margin-bottom: 20px; }
+
+.flex-grid.wrap-items {
+    &.padded-grid {
+        margin-left: -15px;
+        margin-right: -15px;
+
+        .flex-item {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+    }
+}
+
+
+.styles-tab-content {
+    .sd-line-input {
+        padding-top: 0.8em !important;
+        margin-bottom: 0.8em !important;
+    }
+}
